--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mac.cryptocurrencyApp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".CoinApplication"
         android:allowBackup="true"
@@ -11,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptocurrencyApp">
         <activity
-            android:name="com.mac.cryptocurrencyApp.presentation.MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CryptocurrencyApp.NoActionBar">
